# Hexagonal-architecture-GO-vs-Rus

./: .gitignore
go/: Dockerfile  docker-compose.yaml  go.mod  go.sum  main.go  sqlite.db
go/adapters/cli/: product.go  product_test.go
go/adapters/db/: product.go  product_test.go
go/adapters/dto/: product.go
go/adapters/web/handler/: error_json.go  product.go
go/adapters/web/server/: server.go
go/application/: product.go  product_service.go  product_service_test.go  product_test.go
go/application/mocks/: application.go
go/cmd/: cli.go  http.go  root.go
rust-hexagonal/: Cargo.toml  Dockerfile  docker-compose.yaml  sqlite.db
rust-hexagonal/src/: main.rs
rust-hexagonal/src/adapters/: mod.rs
rust-hexagonal/src/adapters/cli/: cli_product.rs  cli_product_test.rs  mod.rs
rust-hexagonal/src/adapters/db/: mod.rs  product_db.rs  product_db_test.rs
rust-hexagonal/src/adapters/web/server/: mod.rs  web_server.rs
rust-hexagonal/src/adapters/web/server/handlers/: product_handler.rs
rust-hexagonal/src/application/: mod.rs  product.rs  product_service.rs  product_service_test.rs  product_test.rs
rust-hexagonal/src/cmd/: cmmd.rs  mod.rs
