[package]
name = "rust-hexagonal"
version = "0.1.0"
edition = "2021"

[dependencies]
validator = { version = "0.15", features = ["derive"] }
mockall = "0.11.2"
log = "0.4.17"
env_logger = "0.9.0"
error-stack = "0.1.1"
structopt = "0.3.26"
actix-web = "4"
r2d2 = "*"
r2d2_sqlite = "*"
serde = { version = "*", features = ["derive"] }

[dependencies.uuid]
version = "1.1.2"
features = ["v4", "fast-rng", "macro-diagnostics"]

[dev-dependencies]
pretty_assertions = "1.2.1"
faux = "0.1.6"

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]
